<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fitnation.login.LoginFragment"
    android:background="@color/textColorDark"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_background_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/login_bottom_bar_imageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@color/loginFooter" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/fit_nation_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/login_blocks_horizontal_margin"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/login_blocks_horizontal_margin"
        android:layout_marginRight="@dimen/login_blocks_horizontal_margin"
        android:background="@color/loginEditText"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="6dp" />

    <Button
        android:id="@+id/forgot_login_button"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/actionable"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/login_blocks_horizontal_margin"
        android:layout_marginRight="@dimen/login_blocks_horizontal_margin"
        android:background="@color/actionable"
        android:textColor="@color/loginButtonText"
        android:text="@string/login" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/login_blocks_horizontal_margin"
        android:layout_marginRight="@dimen/login_blocks_horizontal_margin"
        android:background="@color/loginEditText"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="6dp" />

    <TextView
        android:id="@+id/signUp_textView"
        android:text="@string/no_account"
        android:textColor="@color/textColorDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signUp_button"
        android:layout_alignBottom="@+id/signUp_button"
        android:layout_alignStart="@+id/login_button"
        android:layout_marginStart="19dp" />

    <Button
        android:id="@+id/signUp_button"
        android:text="@string/sign_up"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/actionable"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/signUp_textView"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/google_login_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUp_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_vertical_margin"
        android:text="@string/google"
        android:textColor="@color/loginEditText"
        android:visibility="invisible" />

    <Button
        android:id="@+id/facebook_login_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/google_login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/facebook"
        android:textColor="@color/loginEditText"
        android:visibility="invisible" />

</RelativeLayout>
