<resources>

    <string name="workout_history">Workout History</string>

    <!--App-->
    <string name="app_name">Fit Nation</string>
    <string name="fit_nation">Fit Nation</string>

    <!--Nav-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
...
    <string name="google">Login with Google</string>
    <string name="github">Login with GitHub</string>
    <string name="twitter">Login with Twitter</string>

    <string name="reset_password">Reset Password</string>
    <string name="resend_email">Resend email</string>
    <string name="email_success_title">Success</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">User Name</string>

    <string name="register_success_title">Success!</string>
    <string name="register_success_message">Welcome to the Fit Nation! To complete the regestration process please confirm your email</string>

    <string name="bottom_bar">Bottom Bar Color</string>

    <!--Build Workout-->
    <string name="beginner">BEGINNER</string>
...
    <string name="dialog_create_workout_instance_failure_message">"Workout save failed. Error: "</string>


    <!--Error/Success/Progress Dialogs-->
    <string name="progress_message">Please wait...</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_error_title">Error</string>
    <string name="alert_dialog_ok_button">OK</string>
    <string name="volley_title_access_refreshed">Access Refreshed</string>
    <string name="volley_message_access_refreshed">Authorization has been refreshed</string>
    <string name="volley_title_no_response">No Response</string>
    <string name="volley_message_no_response">There was no response from the server. Please make sure that you are connected to the internet</string>

    <string name="volley_title_100">Success</string>
    <string name="volley_title_101">Error</string>
...
